feat: create stream when stream start and save stream when stream stops and changes to stream db design
