# routes/stream_info_routes.go
@@ -1,0 +1,16 @@
+package routes
+
+import (
+	"main/controllers"
+
+	"github.com/gin-gonic/gin"
+)
+
+func StreamInfoRoutes(api *gin.RouterGroup) {
+	streamInfo := api.Group("/stream-info")
+	{
+		streamInfo.PUT("/", controllers.CreateOrUpdateStreamInfo)
+		streamInfo.GET("/:hostPrincipalID", controllers.GetStreamInfoByUserID)
+
+	}
+}
